Add JFR Support
- add JFR handler interceptor
- add JFR method interceptor
- add start script with JFR for local and docker
- add JFC file